--- a/package.json
+++ b/package.json
@@ -26,9 +26,14 @@
     "@angular/platform-browser": "7.2.4",
     "@angular/platform-browser-dynamic": "7.2.4",
     "@angular/router": "7.2.4",
+    "@ngrx/effects": "^8.4.0",
+    "@ngrx/schematics": "^8.4.0",
+    "@ngrx/store": "^8.4.0",
+    "@ngrx/store-devtools": "^8.4.0",
     "core-js": "^2.4.1",
     "marked": "^0.3.9",
     "moment": "^2.24.0",
+    "ngrx-store-freeze": "^0.2.4",
     "ngx-moment": "^3.4.0",
     "pusher-js": "^5.0.1",
     "rxjs": "^6.4.0",
