Finish day 2 and 3 test and e2e

--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -2,9 +2,8 @@
   "compilerOptions": {
     "baseUrl": ".",
     "typeRoots": ["../node_modules/cypress/types"],
-    "types": ["index"],
     "checkJs": true,
     "allowJs": true
   },
-  "include": ["./support/index.d.ts", "../node_modules/cypress/types/index.d.ts"]
+  "include": ["./support/index.d.ts"]
 }
