--- a/angular.json
+++ b/angular.json
@@ -191,7 +191,7 @@
     "@schematics/angular:component": {
       "prefix": "app",
       "styleext": "css",
-      "spec": false
+      "spec": true
     },
     "@schematics/angular:directive": {
       "prefix": "app",
