prepare scuri Install Config tsconfig.json configure jest.config.js

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,11 @@
       "dom"
     ],
     "allowJs": true,
-    "checkJs": true
+    "checkJs": true,
+    "baseUrl": ".",
+    "paths": {
+      "autoSpy": ["./src/app/auto-spy"]
+    }
   },
   "include": ["./src/**/*.ts"],
   "exclude": ["./cypress/**/*.*"]
