--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "ngx-moment": "^3.4.0",
     "pusher-js": "^5.0.1",
     "rxjs": "^6.4.0",
+    "scuri": "^0.9.3",
     "tslib": "^1.9.0",
     "zone.js": "^0.8.29"
   },
