Solve: NgRx broke the e2e test 1. Fix typing(!) for e2e js(!) files 2. Add the API url to cypress env 3. Fix the dom indicator 4. Add tests for effect, reducer and the user.service "facade" 5. Expose the store to the Cypress e2e tests

--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -1,9 +1,8 @@
 {
   "compilerOptions": {
-    "baseUrl": ".",
-    "typeRoots": ["../node_modules/cypress/types"],
+    "baseUrl": "./",
+    "typeRoots": ["../node_modules/cypress/types", "./support/index.d.ts"],
     "checkJs": true,
     "allowJs": true
-  },
-  "include": ["./support/index.d.ts"]
+  }
 }
